商品属性显示 & 翻译完毕

--- a/templates/cat_menu.html
+++ b/templates/cat_menu.html
@@ -9,9 +9,9 @@ $(function() {
   <ul>
     <li>
       {if $login}
-      <a href="user.php?act=logout">{$lang.logout}</a>
+      <a href="user.php?act=logout">{$lang.user_logout}</a>
       {else}
-      <a href="user.php">{$lang.login}</a>
+      <a href="user.php">{$lang.user_login}</a>
       {/if}
     </li>
     <li>
