--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -89,7 +89,7 @@
           <a href="goods.php?id=1161" target="_blank"><img src="http://img.chihuoyizu.cn/images/201411/13/1415814056211628918.jpg@1e_175w_175h_1c_0i_1o_90Q_1x.jpg" width="60" height="60" /></a>
         </td> -->
         <td>
-          <a href="goods.php?id={$goods.goods_id}">{$goods.goods_name}</a>
+          <a href="goods.php?id={$goods.goods_id}">{$goods.goods_name}</a> {$goods.goods_attr}
         </td>
         <td align="right">{$goods.goods_number} x {$goods.goods_price}</td>
       </tr>
